--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@algorandfoundation/algokit-utils": "^9.1.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/supabase-js": "^2.58.0",
+    "algosdk": "^3.5.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "nanoid": "^5.1.6",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
