--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "algoflow-sdk": "file:./lib-1.0.9.tgz"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
