--- a/lib/package.json
+++ b/lib/package.json
@@ -1,9 +1,11 @@
 {
   "name": "lib",
-  "version": "1.1.6",
+  "version": "1.2.4",
   "type": "module",
   "main": "./dist/index.js",
   "scripts": {
+    "build": "npx tsc && cp -r fn/artifacts dist/fn/",
+    "build:win": "npx tsc && xcopy /E /I fn\\artifacts dist\\fn\\artifacts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
